--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div>
           <img
             src="./assets/images/illustration-article.svg"
+            alt="blog preview image"
             class="rounded-xl"
           />
         </div>
@@ -80,7 +81,7 @@
           </p>
         </div>
         <div class="flex items-center gap-2">
-          <img src="./assets/images/image-avatar.webp" class="h-6 w-6" />
+          <img src="./assets/images/image-avatar.webp" alt="author image" class="h-6 w-6" />
           <span class="text-xs text-gray-950 font-[800]">Greg Hooper</span>
         </div>
       </div>
